# Learning-Management-System-FastAPI

./: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 5855dde2b474_jay_migration.py  5d18fcb7ee37_jay3_migration.py  67da18e77971_jay1_migration.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: course.py  user.py
